<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/shadow_btn"
        android:backgroundTint="#0084BF"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/tvTimeOut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/kitto"
            android:gravity="center"
            android:text="Pause"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:textStyle="bold" />



        <Button
            android:id="@+id/btnResume"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:layout_marginHorizontal="5dp"
            android:background="@drawable/corner_button"
            android:backgroundTint="#2CC145"
            android:drawableStart="@drawable/ic_baseline_replay_24"
            android:elevation="10dp"
            android:layout_marginVertical="5dp"
            android:fontFamily="@font/sanfancisco"
            android:gravity="center"
            android:text="@string/resume"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnReplay_"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:layout_marginHorizontal="5dp"
            android:background="@drawable/corner_button"
            android:backgroundTint="#FFA014"
            android:drawableStart="@drawable/ic_baseline_refresh_24"
            android:elevation="10dp"
            android:layout_marginVertical="5dp"
            android:fontFamily="@font/sanfancisco"
            android:gravity="center"
            android:text="@string/restart"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnExit_"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:layout_marginHorizontal="5dp"
            android:background="@drawable/corner_button"
            android:backgroundTint="#FF1C1C"
            android:drawableStart="@drawable/ic_baseline_keyboard_return_24"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="15sp"
            android:elevation="10dp"
            android:fontFamily="@font/sanfancisco"
            android:gravity="center"
            android:text="@string/exit"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold" />

    </LinearLayout>


</LinearLayout>

