<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/mainLayout"
    android:background="@drawable/moutain">

<!--    <com.airbnb.lottie.LottieAnimationView-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:lottie_autoPlay="true"-->
<!--        app:lottie_loop="true"-->
<!--        android:scaleType="centerCrop"-->
<!--        app:lottie_rawRes="@raw/snow" />-->


    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_marginTop="272dp"
        android:scaleType="centerCrop"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvStart"
        android:layout_width="230dp"
        android:layout_height="70dp"
        android:background="@drawable/btnbackground"
        android:elevation="10dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/kitto"
        android:gravity="center"
        android:scaleType="centerCrop"
        android:text="@string/start"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgLogo"
        app:layout_constraintVertical_bias="0.635" />

    <LinearLayout
        android:id="@+id/layout_play"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.605">

        <Button
            android:id="@+id/btnPlayGame"
            android:layout_width="230dp"
            android:layout_height="70dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/btnbackground"
            android:fontFamily="@font/kitto"
            android:text="@string/play_game"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnLeaderBoard"
            android:layout_width="230dp"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/btnbackground"
            android:fontFamily="@font/kitto"
            android:text="@string/leaderboard"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>